--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,28 @@
 ul, li {
   list-style: none;;
 }
+
+html {
+  font-size: 10px;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
+  color: #333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+  padding: 1rem;
 }
 
 code {
